--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -106,13 +106,13 @@
                 <label>Course Name</label>
                 <input type="text" name="courseName" value="{{ courseName_text }}" required><br>
 
-                <label>Practical Lecturer</label>
-                <select id="practicalLecturerSelect" name="practicalLecturerSelect" required>
+                <label>Practical Lecturer (Optional)</label>
+                <select id="practicalLecturerSelect" name="practicalLecturerSelect">
                     <option value="" disabled selected>Select Practical Lecturer</option>
                 </select><br>
 
-                <label>Tutorial Lecturer</label>
-                <select id="tutorialLecturerSelect" name="tutorialLecturerSelect" required>
+                <label>Tutorial Lecturer (Optional)</label>
+                <select id="tutorialLecturerSelect" name="tutorialLecturerSelect">
                     <option value="" disabled selected>Select Tutorial Lecturer</option>
                 </select>
             </div>
@@ -170,12 +170,12 @@
             </div>
 
             <div class="form-middle">
-                <label>Practical Lecturer (Optional)</label>
+                <label>Practical Lecturer</label>
                 <select id="editPracticalLecturer" name="practicalLecturerSelect">
                     <option value="" disabled>Select Practical Lecturer</option>
                 </select><br>
 
-                <label>Tutorial Lecturer (Optional)</label>
+                <label>Tutorial Lecturer</label>
                 <select id="editTutorialLecturer" name="tutorialLecturerSelect">
                     <option value="" disabled>Select Tutorial Lecturer</option>
                 </select><br>
