--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -50,11 +50,9 @@
             <h4 style="text-align: center;">File Upload Section</h4>
             <label for="course_list">
                 <div class="upload-container" id="courseUploadContainer">
-                    <h4>Download Course Templates by Department</h4>
+                    <h4>Download Course Template</h4>
                     <div>
-                        {% for dept in department_data %}
-                            <a href="{{ url_for('download_course_template', department_code=dept.departmentCode) }}" style="margin: 0 10px;">{{ dept.departmentCode }}</a>
-                        {% endfor %}
+                        <a href="{{ url_for('download_course_template') }}" style="margin: 0 10px;"><i>HERE</i></a>
                     </div><br><br>
                     <div class="upload-text">
                         Please upload a file with the <b>first row left empty</b>.
