--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -56,7 +56,7 @@
                         Ensure the data follows this format:<br>
                         • <b>Card Id</b> is an <b>optional</b><br>
                         • <b>Email</b> must end with <b>@newinti.edu.my</b><br>
-                        • <b>Contact</b> must start with <b>01</b> and contain 10–11 digits<br><br>
+                        • <b>Contact</b> is an <b>optional</b>and</b> must start with <b>01</b> and contain 10–11 digits<br><br>
                         Click below to upload, or drag and drop a file (accepted formats: <b>XLSX, XLS, XLSM</b>).
                     </div><br>
                     <div id="staffSelectedFileName" class="file-name-display"></div>
