--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -50,10 +50,9 @@
             <h4 style="text-align: center;">File Upload Section</h4>
             <label for="course_list">
                 <div class="upload-container" id="courseUploadContainer">
-                    <h4>Download Course Template</h4>
-                    <div>
-                        <a href="{{ url_for('download_course_template') }}" style="margin: 0 10px;"><i>HERE</i></a>
-                    </div><br><br>
+                    <h4 style="text-align: center;">
+                        Download Course Template <a href="{{ url_for('download_course_template') }}"><i>HERE</i></a>
+                    </h4><br>
                     <div class="upload-text">
                         Please upload a file with the <b>first row left empty</b>.
                         Data should begin from columns <b>A to F</b>, with headers as follows:<br><br>
