--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -143,7 +143,7 @@
         <div class="profile-frame">
             <div class="form-left">
                 <!-- Select Existing Course -->
-                <label>Select Course Code/Section - Course Name</label>
+                <label>Select Course Code - Course Name</label>
                 <select id="editCourseSelect" name="editCourseSelect" required>
                     <option value="" disabled selected>Select Course</option>
                     {% for row in course_data %}
