--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -200,7 +200,7 @@
                             <div>Course Name</div><div><strong>: {{ row.course.courseName }}</strong></div>
                             <div>Course Code/Section</div><div><strong>: {{ row.course.courseCodeSectionIntake.split('/')[0] }}</strong></div>
                             <div>Program Code</div><div><strong>: {{ row.course.courseDepartment }}</strong></div>
-                            <div>Number of Students</div><div><strong>: {{ row.course.courseStudent| sum(attribute='courseStudent') }}</strong></div>
+                            <div>Number of Students</div><div><strong>: {{ row.course | sum(attribute='courseStudent') }}</strong></div>
                             <div>Practical Lecturer</div><div><strong>: {{ row.course.practicalLecturer.userName if row.course.practicalLecturer else '<span>N/A</span>' | safe }}</strong></div>
                             <div>Tutorial Lecturer</div><div><strong>: {{ row.course.tutorialLecturer.userName if row.course.tutorialLecturer else  '<span>N/A</span>' | safe }}</strong></div>
                         </div>
