--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -142,6 +142,7 @@
                             <div>Name</div><div><strong>: {{ att.invigilator.userName }}</strong></div>
                             <div>Contact</div><div><strong>: {{ att.invigilator.userContact }}</strong></div>
                             <div>Gender</div><div><strong>: {{ att.invigilator.userGender }}</strong></div>
+                            <div>Venue</div><div><strong>: {{ att.venueNumber }}</strong></div>
                         </div>
                     </td>
 
